# node-based-image-processor

./: CMakeLists.txt
include/: ImageNode.h  MainWindow.h  Node.h  NodeFactory.h  NodeGraph.h  ProcessingNodes.h  types.h
src/: ImageNode.cpp  MainWindow.cpp  Node.cpp  NodeGraph.cpp  ProcessingNodes.cpp
